--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Speedometr</string>
+    <string name="minus_ten">-10</string>
+    <string name="plus_ten">+10</string>
+    <string name="init_test">Init test</string>
 </resources>
